<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TriforceApp</string>
    
    <!-- IMAGE CONTENT DESCRIPTIONS -->
    <string name="tforce_logo">TriforceApp Logo</string>
    <string name="newTask">New Task</string>
    <string name="editTask">Edit Task</string>
    <string name="deleteTask">Delete Task</string>
    <string name="showLocations">Show Locations</string>
    <string name="exitET">Back</string>

    <!-- TITLE STRINGS -->
    <string name="titleLogin">LOGIN</string>
    <string name="titleRegistration">REGISTRATION</string>
    <string name="titleTaskList">TASK LIST</string>
    <string name="titleNT">NEW TASK</string>
    <string name="titleET">EDIT TASK</string>
    <string name="titleVT">TASK VIEW</string>

    <!-- BUTTON TEXT -->
    <string name="enter">Enter</string>
    <string name="viewDB">View DB</string>
    <string name="userExample">Usernames / Passwords / Names / Emails</string>
    <string name="exitViewDB">Exit DB View</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logoutMain">Logout</string>
    <string name="filterTasks">Filter Tasks</string>

    <!-- FIELD TAGS -->
    <string name="username"> Username: </string>
    <string name="password"> Password: </string>
    <string name="name"> Name: </string>
    <string name="email"> Email: </string>
    <string name="taskName"> Task Name: </string>
    <string name="taskDescription"> Description: </string>
    <string name="taskType"> Task Type: </string>
    <string name="taskDate"> Date Due: </string>
    <string name="taskTime"> Time Due: </string>
    <string name="taskLocation"> Location: </string>

    <!-- SPINNERS -->
    <string name="task_types_prompt">Choose a Task Type</string>

    <string-array name="types_array">
        <item name="personalSpinnerNT">Personal</item>
        <item name="schoolSpinnerNT">School</item>
        <item name="workSpinnerNT">Work</item>
        <item name="otherSpinnerNT">Other</item>
    </string-array>

    <string name="filter_by_prompt">Filter by Type</string>

    <string-array name="filter_array">
        <item name="allSpinnerNT">All</item>
        <item name="personalSpinnerNT">Personal</item>
        <item name="schoolSpinnerNT">School</item>
        <item name="workSpinnerNT">Work</item>
        <item name="otherSpinnerNT">Other</item>
    </string-array>

    <string name="filter_checks_prompt">Filter by Checks</string>

    <string-array name="filter_checks_array">
        <item name="bothChecksSpinner">Both</item>
        <item name="noChecksOnlySpinner">Unchecked Items</item>
        <item name="checksOnlySpinner">Checked Items</item>
    </string-array>

</resources>