<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDD73" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFDD73"
        android:orientation="vertical" >

        <!-- Title "NEW TASK" -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#A67D00" >

            <TextView
                android:id="@+id/headerET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/titleET"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/black_yellow_gradient" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <!-- Tag asking for Task Name and its edit form -->

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/taskNamePromptET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskName"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#03436A"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:id="@+id/editTaskNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine" >
            </EditText>
        </TableRow>
        <!-- Tag for Task Description and its edit form -->

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/descriptionPromptET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskDescription"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#03436A"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:id="@+id/editTaskDescriptET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine" />
        </TableRow>

        <!-- Prompt for selecting the type of the task -->

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/taskTypeTagET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskType"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#03436A"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/newTypeOfTaskET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/task_types_prompt" />
        </TableRow>

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <!-- Tag for Due Date of task and its button prompt -->

            <TextView
                android:id="@+id/dateDisplayET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskDate"
                android:textColor="#03436A"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pickDateET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <!-- Tag for Time Due of task and its button prompt -->

            <TextView
                android:id="@+id/timeDisplayET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskTime"
                android:textColor="#03436A"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pickTimeET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <!-- Tag for Location of task and its edit form -->

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/locationPromptET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskLocation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#03436A"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:id="@+id/editLocationET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:inputType="textPostalAddress" />
        </TableRow>

        <TableRow
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                android:id="@+id/saveButtonET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancelButtonET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </TableRow>
    </LinearLayout>

</ScrollView>