<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDD73"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#A67D00" >

        <TextView
            android:id="@+id/headerVT"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/titleVT"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageButton
            android:id="@+id/editTaskBtn"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="4dp"
            android:src="@android:drawable/ic_menu_edit" />
    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/black_yellow_gradient" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/taskCompletedTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="[ TEXT ]"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#3b2c00"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/viewNameTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskName"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#03436A"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/viewNameTag"
            android:layout_toRightOf="@+id/viewDescTag"
            android:paddingLeft="3dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#3b2c00" />

        <TextView
            android:id="@+id/viewDescTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewNameTxt"
            android:text="@string/taskDescription"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#03436A"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewDescTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/viewDescTag"
            android:layout_below="@+id/viewNameTxt"
            android:layout_toRightOf="@+id/viewDescTag"
            android:paddingLeft="3dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#3b2c00" />

        <TextView
            android:id="@+id/viewTypeTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewDescTxt"
            android:text="@string/taskType"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#03436A"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewTypeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/viewTypeTag"
            android:layout_below="@+id/viewDescTxt"
            android:layout_toRightOf="@+id/viewDescTag"
            android:paddingLeft="3dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#3b2c00" />

        <TextView
            android:id="@+id/viewDateTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewTypeTxt"
            android:text="@string/taskDate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#03436A"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewDateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/viewDateTag"
            android:layout_below="@+id/viewTypeTxt"
            android:layout_toRightOf="@+id/viewDescTag"
            android:paddingLeft="3dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#3b2c00" />

        <TextView
            android:id="@+id/viewTimeTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewDateTxt"
            android:text="@string/taskTime"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#03436A"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewTimeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/viewTimeTag"
            android:layout_below="@+id/viewDateTxt"
            android:layout_toRightOf="@+id/viewDescTag"
            android:paddingLeft="3dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#3b2c00" />

        <TextView
            android:id="@+id/viewLocationTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewTimeTxt"
            android:text="@string/taskLocation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#03436A"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewLocationTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/viewLocationTag"
            android:layout_below="@+id/viewTimeTxt"
            android:layout_toRightOf="@+id/viewDescTag"
            android:paddingLeft="3dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#3b2c00" />
    </RelativeLayout>

</LinearLayout>